@@ -7,6 +7,8 @@ kfreebsd doesn't have F_DUPFD_CLOEXEC, so use it conditionally.
 As mentioned in the bug report, it will have support for it in
 jessie, so we can drop it in jessie+1.
 
+Index: b/src/terminal-screen.c
+===================================================================
 --- a/src/terminal-screen.c
 +++ b/src/terminal-screen.c
 @@ -188,6 +188,20 @@
@@ -30,7 +32,7 @@ jessie, so we can drop it in jessie+1.
  /* See bug #697024 */
  #ifndef __linux__
  
-@@ -1305,7 +1319,7 @@
+@@ -1307,7 +1321,7 @@
        for (j = 0; j < n_fds; j++) {
          if (fds[j] == target_fd) {
            do {
