@@ -2,6 +2,7 @@ gnome-terminal (3.22.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Bump Build-Depends on libvte-2.91-dev to (>= 0.46.1) as per configure.ac.
+  * Refresh patches.
 
  -- Michael Biebl <biebl@debian.org>  Tue, 08 Nov 2016 15:54:02 +0100
 
